# DeepVaR

./: .gitignore  DeepVaR_notebook_v.1.ipynb  README.md  deepAR.py  deepAR_time.py  deepar.py  deepvar_results.ipynb  forecast_multi_deepar_2023-09-11_0.0001_100_2_0.1_100_lstm_True.pkl  forecast_multi_deepar_2023-09-11_0.0001_200_2_0.1_100_lstm_True.pkl  forecast_multi_deepar_2023-09-11_0.0001_50_2_0.1_100_lstm_True.pkl  forecast_multi_deepar_2023-09-11_0.0001_5_2_0.1_100_lstm_True.pkl  forecast_multi_deepar_2023-09-11_0.001_200_2_0.1_100_lstm_True.pkl  functions.py  pyproject.toml  run.py  static_parms.py  test.py  var_backtest.py
deepar_results/: portfolio_backtest_results.csv  test_portfolio_backtest_results.csv
stock_data/: get_prices.py
var_backtest_results/: garch_backtest_results.csv  historical_backtest_results.csv  parametric_backtest_results.csv
